fix(listenbrainz): avoid clipping of album art corners

--- a/styles/listenbrainz/catppuccin.user.css
+++ b/styles/listenbrainz/catppuccin.user.css
@@ -341,6 +341,8 @@
         .listen-thumbnail > div {
           color: @accent-color;
           background-color: @surface1;
+          border-top-left-radius: 7px;
+          border-bottom-left-radius: 7px;
         }
 
         .listen-time {
@@ -366,6 +368,7 @@
 
           .listen-thumbnail > div {
             background-color: @surface2;
+            height: 100%;
           }
         }
       }
